--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,6 +27,6 @@ jobs:
         context: .
         push: true
         platforms: linux/amd64,linux/arm64
-        tags: ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
+        tags: ghcr.io/deadfrostt/uptime-kuma-glance-extension:latest
         labels: |
           org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
